[gd_scene load_steps=5 format=3 uid="uid://lswecnwa26fu"]

[ext_resource type="Script" uid="uid://coti6n4lukoat" path="res://scenes/orders/serving_slot.gd" id="1_7nvyl"]
[ext_resource type="Texture2D" uid="uid://6vsbbqyk7yyp" path="res://assets/sprites/counter-slot-default.png" id="2_jsgy0"]
[ext_resource type="Texture2D" uid="uid://c0c0y2uit8l73" path="res://assets/sprites/counter-color.png" id="3_8wtiy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a4qep"]
radius = 32.0

[node name="ServingSlot" type="Node2D"]
script = ExtResource("1_7nvyl")

[node name="InteractionZone" type="CollisionShape2D" parent="."]
position = Vector2(-30, 0)
shape = SubResource("CircleShape2D_a4qep")

[node name="CounterTexture" type="Sprite2D" parent="."]
texture = ExtResource("2_jsgy0")

[node name="OrderColor" type="Sprite2D" parent="."]
texture = ExtResource("3_8wtiy")

[node name="CustomerPosition" type="Marker2D" parent="."]
position = Vector2(64, 0)

[node name="PlatePosition" type="Marker2D" parent="."]
